--- a/blogr-landing-page/src/index.html
+++ b/blogr-landing-page/src/index.html
@@ -80,6 +80,59 @@
           </div>
         </div>
       </header>
+      <section class="future py-8">
+        <div class="container">
+          <h3 class="text-center">Designed for the future</h3>
+          <div class="row">
+            <div>
+              <div>
+                <h5>Introducing an extensible editor</h5>
+                <p>
+                  Blogr features an exceedingly intuitive interface which lets
+                  you focus on one thing: creating content. The editor supports
+                  management of multiple blogs and allows easy manipulation of
+                  embeds such as images, videos, and Markdown. Extensibility
+                  with plugins and themes provide easy ways to add functionality
+                  or change the looks of a blog.
+                </p>
+              </div>
+              <div>
+                <h5>Robust content management</h5>
+                <p>
+                  Flexible content management enables users to easily move
+                  through posts. Increase the usability of your blog by adding
+                  customized categories, sections, format, or flow. With this
+                  functionality, you’re in full control.
+                </p>
+              </div>
+            </div>
+            <div>
+              <img
+                src="./assets/images/illustration-editor-desktop.svg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="infrastructure">
+        <div class="container">
+          <div class="row">
+            <div>
+              <img src="./assets/images/illustration-phones.svg" alt="" />
+            </div>
+            <div>
+              <h3>State of the Art Infrastructure</h3>
+              <p>
+                With reliability and speed in mind, worldwide data centers
+                provide the backbone for ultra-fast connectivity. This ensures
+                your site will load instantly, no matter where your readers are,
+                keeping your site competitive.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- build:js -->
     <script src="./js/main.js"></script>
