--- a/blogr-landing-page/src/index.html
+++ b/blogr-landing-page/src/index.html
@@ -133,6 +133,71 @@
           </div>
         </div>
       </section>
+      <section class="open py-8">
+        <div class="container">
+          <div class="row">
+            <div>
+              <img
+                src="./assets/images/illustration-laptop-desktop.svg"
+                alt=""
+              />
+            </div>
+            <div>
+              <div>
+                <h5>Free, open, simple</h5>
+                <p>
+                  Blogr is a free and open source application backed by a large
+                  community of helpful developers. It supports features such as
+                  code syntax highlighting, RSS feeds, social media integration,
+                  third-party commenting tools, and works seamlessly with Google
+                  Analytics. The architecture is clean and is relatively easy to
+                  learn.
+                </p>
+              </div>
+              <div>
+                <h5>Powerful tooling</h5>
+                <p>
+                  Batteries included. We built a simple and straightforward CLI
+                  tool that makes customization and deployment a breeze, but
+                  capable of producing even the most complicated sites.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="py-4">
+        <div class="container">
+          <div><img src="./assets/images/logo.svg" alt="Blogr" /></div>
+          <div>
+            <span class="lead">Product</span>
+            <ul>
+              <li><a href="#">Overview</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Integrations</a></li>
+            </ul>
+          </div>
+          <div>
+            <span class="lead">Company</span>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+            </ul>
+          </div>
+          <div>
+            <span class="lead">Connect</span>
+            <ul>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Newsletter</a></li>
+              <li><a href="#">LinkedIn</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </main>
     <!-- build:js -->
     <script src="./js/main.js"></script>
