blogt responsive future + open

--- a/blogr-landing-page/src/index.html
+++ b/blogr-landing-page/src/index.html
@@ -69,6 +69,11 @@
                 <a href="#"><button class="btn btn-primary">Sign Up</button></a>
               </li>
             </ul>
+            <div class="burger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </nav>
           <h1 class="text-center">A modern publishing platform</h1>
           <p class="text-center">
@@ -110,6 +115,12 @@
               <img
                 src="./assets/images/illustration-editor-desktop.svg"
                 alt=""
+                class="desktop"
+              />
+              <img
+                src="./assets/images/illustration-editor-mobile.svg"
+                alt=""
+                class="mobile"
               />
             </div>
           </div>
@@ -140,6 +151,12 @@
               <img
                 src="./assets/images/illustration-laptop-desktop.svg"
                 alt=""
+                class="desktop"
+              />
+              <img
+                src="./assets/images/illustration-laptop-mobile.svg"
+                alt=""
+                class="mobile"
               />
             </div>
             <div>
@@ -170,7 +187,7 @@
         <div class="container">
           <div><img src="./assets/images/logo.svg" alt="Blogr" /></div>
           <div>
-            <span class="lead">Product</span>
+            <strong class="lead">Product</strong>
             <ul>
               <li><a href="#">Overview</a></li>
               <li><a href="#">Pricing</a></li>
@@ -180,7 +197,7 @@
             </ul>
           </div>
           <div>
-            <span class="lead">Company</span>
+            <strong class="lead">Company</strong>
             <ul>
               <li><a href="#">About</a></li>
               <li><a href="#">Team</a></li>
@@ -189,7 +206,7 @@
             </ul>
           </div>
           <div>
-            <span class="lead">Connect</span>
+            <strong class="lead">Connect</strong>
             <ul>
               <li><a href="#">Contact</a></li>
               <li><a href="#">Newsletter</a></li>
