--- a/blogr-landing-page/src/index.html
+++ b/blogr-landing-page/src/index.html
@@ -31,7 +31,14 @@
               <li>
                 <a href="#"
                   >Product
-                  <img src="./assets/images/icon-arrow-light.svg" alt=""
+                  <img
+                    src="./assets/images/icon-arrow-light.svg"
+                    alt=""
+                    class="desktop" />
+                  <img
+                    src="./assets/images/icon-arrow-dark.svg"
+                    alt=""
+                    class="mobile"
                 /></a>
                 <ul>
                   <li><a href="#">Overview</a></li>
@@ -44,7 +51,14 @@
               <li>
                 <a href="#"
                   >Company
-                  <img src="./assets/images/icon-arrow-light.svg" alt=""
+                  <img
+                    src="./assets/images/icon-arrow-light.svg"
+                    alt=""
+                    class="desktop" />
+                  <img
+                    src="./assets/images/icon-arrow-dark.svg"
+                    alt=""
+                    class="mobile"
                 /></a>
                 <ul>
                   <li><a href="#">About</a></li>
@@ -56,8 +70,16 @@
               <li>
                 <a href="#"
                   >Connect
-                  <img src="./assets/images/icon-arrow-light.svg" alt=""
+                  <img
+                    src="./assets/images/icon-arrow-light.svg"
+                    alt=""
+                    class="desktop" />
+                  <img
+                    src="./assets/images/icon-arrow-dark.svg"
+                    alt=""
+                    class="mobile"
                 /></a>
+
                 <ul>
                   <li><a href="#">Contact</a></li>
                   <li><a href="#">Newsletter</a></li>
