--- a/blogr-landing-page/src/index.html
+++ b/blogr-landing-page/src/index.html
@@ -235,6 +235,19 @@
               <li><a href="#">LinkedIn</a></li>
             </ul>
           </div>
+          <div class="attribution">
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. Coded by
+            <a
+              href="https://www.frontendmentor.io/profile/RajCutinha"
+              target="_blank"
+              >Raj Cutinha</a
+            >.
+          </div>
         </div>
       </footer>
     </main>
