--- a/manage-landing-page/src/index.html
+++ b/manage-landing-page/src/index.html
@@ -36,6 +36,11 @@
               <li><a href="#">Community</a></li>
             </ul>
             <button class="btn btn-primary">Get Started</button>
+            <div class="burger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </nav>
 
           <div class="row">
@@ -85,7 +90,7 @@
                 </p>
               </div>
               <div>
-                <span class="count"> 03</span>
+                <span class="count">03</span>
                 <span class="lead">Everything you need in one place</span>
                 <p>
                   Stop jumping from one service to another to communicate, store
@@ -129,13 +134,19 @@
           </div>
           <div>
             <img src="./assets/images/avatar-shanai.png" alt="" />
-            <span class="lead">Shanai Gough </span>
+            <span class="lead text-center">Shanai Gough </span>
             <blockquote>
               “Their software allows us to track, manage and collaborate on our
               projects from anywhere. It keeps the whole team in-sync without
               being intrusive.”
             </blockquote>
           </div>
+        </div>
+        <div class="pagination row">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
         <button class="btn btn-primary">Get Started</button>
       </section>
