--- a/single-page-design-portfolio/src/index.html
+++ b/single-page-design-portfolio/src/index.html
@@ -12,11 +12,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/main.scss" />
+    <script type="module" src="./js/main.ts" defer></script>
   </head>
   <body>
-    <div id="app">
-      <h1>Test2</h1>
-    </div>
-    <script type="module" src="./js/main.ts"></script>
+    <main>
+      <header class="container">
+        <img src="./assets/logo.svg" alt="" />
+        <button class="btn btn-primary">Free Consultation</button>
+      </header>
+    </main>
   </body>
 </html>
