added solutions section

--- a/single-page-design-portfolio/src/index.html
+++ b/single-page-design-portfolio/src/index.html
@@ -20,6 +20,39 @@
         <img src="./assets/logo.svg" alt="" />
         <button class="btn btn-primary">Free Consultation</button>
       </header>
+      <section class="container solutions">
+        <h1>Design solutions made easy</h1>
+        <p>
+          With over ten years of experience in various design disciplines, I’m
+          your one-stop shop for your design needs.
+        </p>
+        <div class="solutions-container">
+          <div>
+            <img src="./assets/pattern-graphic-design.svg" alt="" />
+            <h4>Graphic Design</h4>
+          </div>
+          <div>
+            <img src="./assets/pattern-ui-ux.svg" alt="" />
+            <h4>UI/UX</h4>
+          </div>
+          <div>
+            <img src="./assets/pattern-apps.svg" alt="" />
+            <h4>Apps</h4>
+          </div>
+          <div>
+            <img src="./assets/pattern-photography.svg" alt="" />
+            <h4>Photography</h4>
+          </div>
+          <div>
+            <img src="./assets/pattern-illustrations.svg" alt="" />
+            <h4>Illustrations</h4>
+          </div>
+          <div>
+            <img src="./assets/pattern-motion-graphics.svg" alt="" />
+            <h4>Motion Graphics</h4>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
