added hero section

--- a/single-page-design-portfolio/src/index.html
+++ b/single-page-design-portfolio/src/index.html
@@ -53,6 +53,20 @@
           </div>
         </div>
       </section>
+      <section class="container hero">
+        <div>
+          <img src="./assets/image-amy.webp" alt="" />
+          <div>
+            <h2>I’m Amy, and I’d love to work on your next project</h2>
+            <p>
+              I love working with others to create beautiful design solutions.
+              I’ve designed everything from brand illustrations to complete
+              mobile apps. I’m also handy with a camera!
+            </p>
+            <button class="btn btn-secondary">Free Consultation</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
